--- a/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
+++ b/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
@@ -38,7 +38,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/settings">
+                <NavLink class="nav-link" href="/parent">
                     <span class="bi bi-gear-fill" aria-hidden="true"></span> Settings
                 </NavLink>
             </div>
