--- a/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
@@ -48,7 +48,7 @@ else
 
     private async Task HandleConfirm()
     {
-
+        await Task.Delay(10);
     }
     
     private void HandleCancel()
