--- a/Source/AllowanceApp.Blazor/Components/Cards/TransactionCard.razor
+++ b/Source/AllowanceApp.Blazor/Components/Cards/TransactionCard.razor
@@ -2,6 +2,7 @@
 
 @using AllowanceApp.Blazor.Models
 @using AllowanceApp.Blazor.Services
+@using AllowanceApp.Blazor.Styling
 @using AllowanceApp.Shared.DTO
 @inject AccountApiService AccountApi
 
@@ -56,7 +57,7 @@
                         <tr class="hover:bg-gray-50 dark:hover:bg-gray-800">
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.TransactionID</td>
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.Date.ToShortDateString()</td>
-                            <td class="px-4 py-2 text-md @(ApprovalTextColorCSS.GetValueOrDefault(tx.Status))">@tx.Status</td>
+                            <td class="px-4 py-2 text-md @(Styling.ApprovalTextColorCSS.GetValueOrDefault(tx.Status))">@tx.Status</td>
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.Description</td>
                             <td class="px-4 py-2 text-md font-medium @(tx.Amount >= 0 ? "text-green-600 dark:text-green-400" : "text-red-600 dark:text-red-400")">
                                 $@((tx.Amount/100.0).ToString("#0.00"))
@@ -87,14 +88,7 @@
             .Where(t => SelectedStatus == "All" || t.Status.ToString() == SelectedStatus)
             .OrderByDescending(t => t.TransactionID)
             .Take(PageSize == 0 ? int.MaxValue : PageSize)
-            .ToList();
-    
-    private Dictionary<ApprovalStatus, string> ApprovalTextColorCSS = new() 
-    {
-        {ApprovalStatus.Approved, "text-green-600 dark:text-green-400"},
-        {ApprovalStatus.Declined, "text-red-600 dark:text-red-400"},
-        {ApprovalStatus.Pending, "text-gray-400 dark:text-gray-600 italic"},
-    };
+            .ToList();    
 
     private string MakeCardSubtitle()
     {
