Wrote a couple of tests for the new Transaction Approve and Decline methods, but only in the real Account model in the Core project. Still need to do tests at the Data and API level. Is that even a useful exercise? It might be.

--- a/Source/AllowanceApp.Blazor/Components/Cards/BalanceCard.razor
+++ b/Source/AllowanceApp.Blazor/Components/Cards/BalanceCard.razor
@@ -47,7 +47,7 @@
     private Modal? MyModal;
     private string RequestTitle = string.Empty;
     private string QueryString = string.Empty;
-    private TransactionRequest Request = new();
+    private TransactionRequest Request = new(1);
 
 
 
